--- a/.chezmoiexternals/linux.yaml.tmpl
+++ b/.chezmoiexternals/linux.yaml.tmpl
@@ -1,3 +1,5 @@
+
+{{ if eq .chezmoi.os "linux" }}
 {{- $unameMachine := "" -}}
 {{- if eq .chezmoi.os "linux" }}
   {{- $unameMachine = output "uname" "-m" | trim -}}
@@ -114,4 +116,5 @@
     {{- end }}
   executable: true
 
+{{- end }}
 {{- end }}
