--- a/.chezmoitemplates/scripts/debian.sh.tmpl
+++ b/.chezmoitemplates/scripts/debian.sh.tmpl
@@ -18,6 +18,40 @@ sudo apt install nushell
 {{- end }}
 #endregion
 
+{{- if and (eq .chezmoi.osRelease.id "ubuntu") (has "core" .software_groups) }}
+# Add Docker's official GPG key:
+sudo apt-get update
+sudo apt-get install ca-certificates curl
+sudo install -m 0755 -d /etc/apt/keyrings
+sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+sudo chmod a+r /etc/apt/keyrings/docker.asc
+
+# Add the repository to Apt sources:
+echo \
+  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+  $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}") stable" | \
+  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+sudo apt-get update
+
+sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+{{- else }}
+# Add Docker's official GPG key:
+sudo apt-get update
+sudo apt-get install ca-certificates curl
+sudo install -m 0755 -d /etc/apt/keyrings
+sudo curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc
+sudo chmod a+r /etc/apt/keyrings/docker.asc
+
+# Add the repository to Apt sources:
+echo \
+  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian \
+  $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+sudo apt-get update
+sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+{{- end }}
+
+
 #region Software installation
 {{- if has "core" .software_groups }}
 sudo apt install git
@@ -26,12 +60,12 @@ sudo apt install git
 {{- if has "tool" .software_groups }}
 # dependencies for vhs
 sudo apt install ffmpeg
+{{- end }}
 
+{{- if has "gui" .software_groups }}
     {{- if not (or (findExecutable "flatpak" (list "bin" "/usr/bin" ".local/bin")) (lookPath "flatpak")) }}
 sudo apt install flatpak
 flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
     {{- end }}
-    
-flatpak install --user flathub io.anytype.anytype
 {{- end }}
 #endregion
