--- a/.chezmoitemplates/scripts/debian.sh.tmpl
+++ b/.chezmoitemplates/scripts/debian.sh.tmpl
@@ -18,7 +18,7 @@ sudo apt install nushell
 {{- end }}
 #endregion
 
-{{- if and (eq .chezmoi.osRelease.id "ubuntu") (has "core" .software_groups) }}
+{{- if and (eq .chezmoi.osRelease.id "ubuntu") (has "base" .software_groups) }}
 # Add Docker's official GPG key:
 sudo apt-get update
 sudo apt-get install ca-certificates curl
@@ -53,7 +53,7 @@ sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin 
 
 
 #region Software installation
-{{- if has "core" .software_groups }}
+{{- if has "base" .software_groups }}
 sudo apt install git
 {{- end }}
 
