Dot not set XDG_DATA_HOME

--- a/dot_config/nushell/config.nu.tmpl
+++ b/dot_config/nushell/config.nu.tmpl
@@ -1,6 +1,6 @@
 $env.path ++= ["~/.local/bin"]
 
-source ($nu.data-dir  | path join 'internal.nu')
+source ($nu.default-config-dir  | path join 'internal.nu')
 
 # Functions
 
